# DevOps

./: .dockerignore  .gitignore  AGENTS.md  README.md  ansible.cfg  docker-compose.prod.yml  docker-compose.yml  init_vm.sh  sonar-project.properties
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: errors.py  router.py
backend/app/core/: influx.py  postgres.py  settings.py
backend/app/domain/: detector.py
backend/app/observability/: __init__.py  metrics.py
backend/app/repositories/: detection_repository.py  detector_repository.py  generator_repository.py  interfaces.py  json_store.py  traffic_repository.py  transaction.py
backend/app/services/: detection_service.py  detector_service.py  generator_service.py  ml_client.py  monitoring_service.py  traffic_service.py
backend/migrations/: 001_detector_domain.sql
backend/tests/contract/: test_core_routes_alive.py  test_detections_api.py  test_detector_profile_api.py  test_detectors_api.py  test_generator_job_api.py  test_ingest_generated_batch.py  test_monitoring_api.py  test_monitoring_profile_filter_api.py  test_openapi_alignment.py  test_persistence_availability.py
backend/tests/fixtures/: traffic_points.json
backend/tests/integration/: conftest.py  test_concurrent_persistence_consistency.py  test_detector_repository_mutations.py  test_repository_roundtrip.py  test_restart_persistence.py
backend/tests/unit/: conftest.py  test_api_routes_and_errors.py  test_detection_run_history_service.py  test_ml_client.py  (+9 more)
ml-service/: Dockerfile  pyproject.toml
ml-service/app/: main.py
(+172 files in other folders)
