[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-anomaly-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "influxdb-client>=1.43.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0"]

[tool.setuptools.packages.find]
include = ["app*"]
