[project]
name = "traffic-anomaly-ml-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "joblib>=1.4.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0"]
